agregue movimientos con teclas, falta arreglar movimiento de paredes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <div id="world"></div>
+    <div id="pacman"></div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
